app name changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "road-to-react-hacker-stories",
+  "name": "assignments",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
