--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.1.0",
